--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_svg: ^2.2.0
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
+  font_awesome_icon_class: ^0.0.6
 
 dev_dependencies:
   flutter_test:
