--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
   font_awesome_icon_class: ^0.0.6
+  firebase_core: ^3.15.1
 
 dev_dependencies:
   flutter_test:
