--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  get: ^4.7.2
   equatable: ^2.0.7
   json_annotation: ^4.9.0
   flutter_svg: ^2.2.0
@@ -32,6 +31,7 @@ dependencies:
   google_fonts: ^6.2.1
   font_awesome_icon_class: ^0.0.6
   firebase_core: ^3.15.1
+  go_router: ^16.0.0
 
 dev_dependencies:
   flutter_test:
