--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,29 +21,29 @@ version: 1.0.0+1
 environment:
   sdk: ^3.8.1
 dependencies:
+  cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  equatable: ^2.0.7
+  firebase_core: ^3.15.1
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
-  equatable: ^2.0.7
-  json_annotation: ^4.9.0
-  flutter_svg: ^2.2.0
   flutter_screenutil: ^5.9.3
-  google_fonts: ^6.2.1
+  flutter_svg: ^2.2.0
   font_awesome_icon_class: ^0.0.6
-  firebase_core: ^3.15.1
   go_router: ^16.0.0
+  google_fonts: ^6.2.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
+  build_runner: ^2.5.4
+  flutter_gen_runner: ^5.10.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  build_runner: ^2.5.4
   json_serializable: ^6.9.5
-  flutter_gen_runner: ^5.10.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter_gen:
   output: lib/core/gen/ # Optional (default: lib/gen/)
